# fand

./: Cargo.toml  README.md  fand.conf
src/: inputs.rs  lib.rs  outputs.rs  pipeline.rs
src/operations/: mod.rs  parameters.rs
